--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,44 @@
-<div>
-<h1>Home Page</h1>
-
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12" id="tagline1">
+            Sign Up, Book, Swipe & Go
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12" id="tagline2">
+            BOOK your CAR by DESKTOP or MOBILE and ENJOY the FREEDOM of GoCar!
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12" id="tagline3">
+            Irelands ONLY car-sharing company
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12" >
+            <a href="#/joinnow">
+                <div id="join-now">
+                   Join Now
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12" >
+            <a href="#/locations">
+                <div id="find-gocars">
+                   Find GoCars
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12" >
+            <a href="#/login">
+                <div id="log-in">
+                    Log In
+                </div>
+            </a>
+        </div>
+    </div>
 </div>
