--- a/templates/rates.html
+++ b/templates/rates.html
@@ -42,5 +42,26 @@
                 <h3>All GoVans are fueled by diesel</h3>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-12">
+                <ul class="nav nav-tabs">
+                    <li class="active"><a data-target="#city" data-toggle="tab">GOCAR CITY RANGE</a></li>
+                    <li><a data-target="#tripper" data-toggle="tab">GOCAR TRIPPER RANGE</a></li>
+                    <li><a data-target="#van" data-toggle="tab">GOCAR VAN RANGE</a></li>
+                </ul>
+
+                <div class="tab-content">
+                  <div id="city" class="tab-pane fade in active">
+                    <p class="gocar-tab"><span class="euro-sign">€</span>4.99<span class="euro-sign"> / hour</span></p>
+                  </div>
+                  <div id="tripper" class="tab-pane fade">
+                    <p class="gocar-tab"><span class="euro-sign">€</span>5.99<span class="euro-sign"> / hour</span></p>
+                  </div>
+                  <div id="van" class="tab-pane fade">
+                    <p class="gocar-tab"><span class="euro-sign">€</span>7.99<span class="euro-sign"> / hour</span></p>
+                  </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
