--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid home">
     <div class="row">
         <div class="col-md-12" id="tagline1">
             Sign Up, Book, Swipe & Go
