Added funtionality to Send button

--- a/templates/locations.html
+++ b/templates/locations.html
@@ -19,7 +19,7 @@
               <ul class="dropdown-menu">
                 <li><a href="" ng-click="baggotStreet()">Baggot Street</a></li>
                 <li><a href="" ng-click="sandyford()">Sandyford</a></li>
-                <li><a href="" ng-click="malahide()">Malahide</a></li>
+                <li><a href="" ng-click="drumcondra()">Drumcondra</a></li>
               </ul>
             </div>
         </div>
