--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,7 @@
 <div class="container-fluid">
+    <div class="row faqs-title">
+         Login
+    </div>
     <form role="form" class="joinnow-form">
         <fieldset>
         <div class="row">
