--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -10,27 +10,27 @@
             <h3>T: 1890 446 227</h3>
             <h3>E: info@gocar.ie</h3>
         </div>
-        <form role="form" class="col-md-5 col-md-offset-3 contact-us-form">
+        <form id="contact-form"  method="post" role="form" class="col-md-5 col-md-offset-3 contact-us-form">
             <fieldset>
             <legend class="contact-us-legend">Contact Us</legend>
             <div class="form-group label-size">
                 <label for="name" class="control-label col-md-2">Name:</label>
                 <div class="col-md-8">
-                    <input type="text" class="form-control" id="name">
+                    <input type="text" class="form-control" id="name" placeholder="Enter your name..." required autofocus>
                 </div>
                 <br><br>
             </div>
             <div class="form-group label-size">
                 <label for="phone" class="control-label col-md-2">Phone:</label>
                 <div class="col-md-8">
-                    <input type="text" class="form-control" id="phone" required pattern="[0-9]">
+                    <input type="text" class="form-control" id="phone"  placeholder="Enter your phone number...">
                 </div>
                 <br><br>
             </div>
              <div class="form-group label-size">
                 <label for="email" class="control-label col-md-2">Email:</label>
                 <div class="col-md-8">
-                    <input type="email" class="form-control" id="email">
+                    <input type="email" class="form-control" id="email" placeholder="Enter your email address...">
                 </div>
                 <br><br>
             </div>
@@ -41,8 +41,8 @@
                     <br><br>
                 </div>
             </div>
-            <label for="send" class="control-label col-md-2"></label>
-            <button type="submit" class="btn btn-default" id="send">Send</button>
+            <label for="contact-send" class="control-label col-md-2"></label>
+            <button type="submit" class="btn btn-default" id="contact-send" ng-click="contactSend(); sending(); sent()">Send</button>
             </fieldset>
         </form>
     </div>
