--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -10,42 +10,55 @@
             <h3>T: 1890 446 227</h3>
             <h3>E: info@gocar.ie</h3>
         </div>
-        <form id="contact-form"  method="post" role="form" class="col-md-5 col-md-offset-3 contact-us-form">
+        <form ng-submit="onSubmit(theForm.$valid)" name="theForm" id="contact-form" role="form" class="col-md-5 col-md-offset-3 contact-us-form" novalidate="novalidate">
             <fieldset>
             <legend class="contact-us-legend">Contact Us</legend>
             <div class="form-group label-size">
                 <label for="name" class="control-label col-md-2">Name:</label>
                 <div class="col-md-8">
-                    <input type="text" class="form-control" id="name" placeholder="Enter your name..." required autofocus>
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Enter your name..." required autofocus ng-model="formData.name">
                 </div>
                 <br><br>
             </div>
             <div class="form-group label-size">
                 <label for="phone" class="control-label col-md-2">Phone:</label>
                 <div class="col-md-8">
-                    <input type="text" class="form-control" id="phone"  placeholder="Enter your phone number...">
+                    <input type="text" name="phone" class="form-control" id="phone"  placeholder="Enter your phone number..." ng-model="formData.phone">
                 </div>
                 <br><br>
             </div>
-             <div class="form-group label-size">
+             <div class="form-group label-size" ng-class="{'has-error':!theForm.email.$valid && (!theForm.$pristine || theForm.$submitted),'has-success':theForm.email.$valid && (!theForm.$pristine || theForm.$submitted)}">
                 <label for="email" class="control-label col-md-2">Email:</label>
                 <div class="col-md-8">
-                    <input type="email" class="form-control" id="email" placeholder="Enter your email address...">
+                    <input type="email" name="email" class="form-control" id="email" placeholder="Enter your email address..." required ng-model="formData.email">
+                    <p class="help-block" ng-show="theForm.email.$error.required && (!theForm.$pristine || theForm.$submitted)">
+                        This field is required
+                    </p>
+                    <p class="help-block" ng-show="theForm.email.$error.email && (!theForm.$pristine || theForm.$submitted)">
+                        Please enter an email with at least an @ symbol
+                    </p>
+                    <!--<pre>Validation {{ theForm.email.$error | json }}</pre>
+                    <pre>Field Valid? {{ theForm.email.$valid }}</pre>
+                    <pre>Form Pristine? {{ theForm.$pristine }}</pre>
+                    <pre>Form Submitted? {{ theForm.$submitted }}</pre>-->
                 </div>
-                <br><br>
+                <br><br><br>
             </div>
             <div class="form-group label-size">
                 <label for="message" class="control-label col-md-2">Message:</label>
                 <div class="col-md-10">
-                    <textarea class="form-control" rows="5" id="message"></textarea>
+                    <textarea class="form-control" name="message" rows="5" id="message" ng-model="formData.message"></textarea>
                     <br><br>
                 </div>
             </div>
             <label for="contact-send" class="control-label col-md-2"></label>
-            <button type="submit" class="btn btn-default" id="contact-send" ng-click="contactSend(); sending(); sent()">Send</button>
+            <button type="submit" class="btn btn-default" name="contact-send" id="contact-send" ng-click="contactSend(); sending(); sent()">Send</button>
             </fieldset>
         </form>
     </div>
+    <pre>
+        {{ theForm }}
+    </pre>
     <div class="row">
         <div class="col-md-12 map-row">
            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2378.7559016386053!2d-6.262194183976988!3d53.40130627829399!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0xd9229de9d27801b7!2sGo+Car!5e0!3m2!1sen!2sie!4v1452429239063"
